[gd_scene load_steps=5 format=3 uid="uid://cr1sbo0w0ncx8"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_217u2"]
[ext_resource type="Texture2D" uid="uid://dpugucv55k825" path="res://graphics/enemies/scout.png" id="1_yh7tx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1imml"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_w76rn"]
radius = 800.0

[node name="Scout" type="CharacterBody2D" groups=["scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_217u2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(21, 14)
rotation = 1.6057
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_yh7tx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1imml")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_w76rn")

[node name="LaserSpawnPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(61, -11)

[node name="Marker2D2" type="Marker2D" parent="LaserSpawnPositions"]
position = Vector2(65, 7)

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
